# office-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
src/office-mcp/daemon/: Cargo.toml
src/office-mcp/daemon/evidence/: image-evidence.test.ts  image-evidence.ts  mcp-smoke.ts  package-lock.json  package.json  record-agent-client-evidence.ts  record-product-visual-evidence.test.ts  record-product-visual-evidence.ts  record-tray-manual-evidence.test.ts  record-tray-manual-evidence.ts  runtime-evidence.test.ts  runtime-evidence.ts  tsconfig.json  ui-browser-smoke.ts  ui-runtime-evidence.ts  validate-runtime-evidence.test.ts  validate-runtime-evidence.ts
src/office-mcp/daemon/src/: addin_channel.rs  command_router.rs  daemon.rs  daemon_control.rs  daemon_tests.rs  evidence_fixture.rs  evidence_fixture_tests.rs  image_fetcher.rs  lib.rs  main.rs  main_tests.rs  mcp_http_frontend.rs  parity.rs  parity_tests.rs  runtime_server.rs  runtime_server_tests.rs  session_registry.rs  stdio_bridge.rs  tray_host.rs  ui_state_store.rs
src/office-mcp/daemon/src/addin_mgr/: addin_channel.rs  addin_channel_clock.rs  addin_channel_clock_tests.rs  addin_channel_config.rs  addin_channel_config_tests.rs  addin_channel_error.rs  addin_channel_error_tests.rs  addin_channel_model.rs  addin_channel_model_tests.rs  addin_channel_tests.rs  addin_connection_state.rs  addin_connection_state_tests.rs  addin_heartbeat.rs  addin_heartbeat_tests.rs  addin_json_rpc.rs  addin_json_rpc_tests.rs  addin_protocol_version.rs  addin_protocol_version_tests.rs  command_model.rs  (+40 more)
(+300 files in other folders)
