[package]
name = "office-mcp-daemon"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Rust daemon target for Office MCP."

[dependencies]
base64 = "0.22"
native-tls = "0.2"
serde_json = "1"
sha1 = "0.10"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ureq = { version = "2", default-features = false, features = ["tls"] }

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
tao = { version = "0.35", default-features = false }
tray-icon = { version = "0.24", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
tao = { version = "0.35", default-features = false, features = ["dbus", "rwh_06", "x11"] }
tray-icon = { version = "0.24", default-features = false, features = ["gtk", "libxdo"] }

[lints]
workspace = true
